--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "events": "^3.3.0",
+    "jsonwebtoken": "^9.0.0",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "winston": "^3.9.0"
+    "winston": "^3.9.0",
+    "winston-transport": "^4.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
